School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_operations/div_Int_Int.deca
//Division d'un int avec un int
//
{
    int a = 9;
    int b = 3;
    int c = a/b;
}