School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_declarations/wrong_decl_A.deca
//declaration d'un int avec une variable qui n'existe pas (encore)
//erreur attendue : "a" is an invalid expression in Identifier
{
    int a = a;
}